--- a/public/styles.css
+++ b/public/styles.css
@@ -76,6 +76,7 @@ html, body {
   height: 100%;
 }
 
+/* Remove the manual rotate transforms */
 .swiper-slide {
   width: 300px;
   height: 400px;
@@ -84,13 +85,13 @@ html, body {
   align-items: center;
   opacity: 0.5;
   transition: all 0.5s ease;
-  transform: scale(0.7) rotateY(70deg);
+  transform: scale(0.7);
   transform-style: preserve-3d;
 }
 
 .swiper-slide-active {
   opacity: 0.8;
-  transform: scale(0.9) rotateY(0deg);
+  transform: scale(0.9);
 }
 
 .model-preview {
@@ -127,3 +128,28 @@ html, body {
   display: none;
 }
 
+/* Additional styles for item name and price */
+.item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+
+.item-name {
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.item-price {
+  margin-top: 5px;
+  font-size: 14px;
+  color: #ddd;
+  text-align: center;
+}
